--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 *.class
 *.log
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+.idea
+.metals
+.bloop
+.vscode
